--- a/src/components/style.css
+++ b/src/components/style.css
@@ -29,3 +29,65 @@
     margin-right:20px;
     margin-left:100px;
 }
+
+.right{
+    width: 400px;
+    height:300px;
+    background-color:white;
+    margin-top:10px;
+    padding-top:10px;
+    }
+.right p {
+    font-size:18px;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+.heading{
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content: center;
+    margin-top:60px;
+}
+.budget-button{
+    display:flex;
+    flex-direction:row;
+    align-items: center;
+    justify-content:center;
+    padding-right:20px;
+}
+.btn{
+    display:flex;
+    width:200px;
+    height:50px;
+    margin-right: 10px;
+}
+
+.gray{
+    background-color: gray;
+    color:black;
+}
+.green{
+    background-color:rgb(153, 197, 153);
+    color:black;
+}
+.blue{
+    background-color: rgb(21, 145, 216);
+    color:black;
+}
+
+.display{
+    display:flex;
+    margin-left:100px;
+    align-items:center;
+    margin-bottom: 20px;
+
+}
+.form-button{
+    margin-left:200px;
+}
+.algn{
+    align-items: center;
+    background-color:blue !important;
+    color:white;
+}
